:hammer:Made attempts at fixing alignment issues.

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -815,6 +815,7 @@ a[data-toggle="collapse"] {
     width: 100%;
     height: 100%;
     position: relative;
+    align-items: center;
 }
 
 .content-box {
